fix: detail tabs can underflow
i.e. if the body part of the detail overflows, this squishes the tabs to clip at the bottom

--- a/platform/dashboard/src/renderer/src/pages/Dashboard.scss
+++ b/platform/dashboard/src/renderer/src/pages/Dashboard.scss
@@ -79,10 +79,3 @@ button.pf-m-display-lg {
     text-overflow: ellipsis;
   }
 }
-
-/** react-syntax-highlighter override */
-code,
-pre {
-  background: transparent !important;
-  font-size: 0.875rem !important;
-}
