--- a/platform/dashboard/src/renderer/src/pages/Detail.scss
+++ b/platform/dashboard/src/renderer/src/pages/Detail.scss
@@ -22,6 +22,7 @@
 
     section {
       /* we want inner scrolling here */
+      flex: 1;
       overflow: auto;
     }
   }
